_sass/minima/_layout.scss
/**
 * Site header
 */
.site-header {
  // border-top: 5px solid $grey-color-dark;
  // border-bottom: 1px solid $grey-color-light;
  // @acg: instead of borders I decided to put box-shadow
  // box-shadow: 0 0 20px $alternate-background-color;
  border-bottom: 3px double #aaa;
  min-height: 56px;

  background-color: $alternate-background-color;

  // Positioning context for the mobile navigation icon
  position: relative;
  text-align: center;
}

.site-title {
    color: $alternate-color-dark;
  font-family: $title-base-font-family;
  font-size: 24px;
  font-weight: 300;
  line-height: 56px;
  margin-bottom: 0;
  // float: left;

  &,
  &:visited {
      color: $alternate-color-dark;
  }

  @include media-query($on-palm) {
      font-size: 20px;
      float: left;
  }
}
img#site-logo {
    margin: 0;
    max-height: 1.8em;
    margin-right: 20px;
}

.site-nav {
  display: inline-block;
  line-height: 56px;

  .menu-icon {
    display: none;
    background: #444;
  }

  .page-link {
    color: $alternate-text-color;
    font-family: $title-base-font-family;
    line-height: $base-line-height;
    font-size: 1.125em;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }

    @include media-query($on-palm) {
        font-size: 1.25em;
    }
  }

  @include media-query($on-palm) {
    float: right;
    position: absolute;
    top: 9px;
    right: $spacing-unit / 2;
    background-color: $alternate-background-color;
    border: 1px solid $alternate-text-color;
    border-radius: 5px;
    text-align: right;

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg path {
        fill: $grey-color-light;
      }
    }

    .trigger {
      clear: both;
      display: none;
    }

    &:hover .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      padding: 5px 10px;

      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 20px;
    }
  }
}



/**
 * Site footer
 */
.site-footer {
  background-color: $alternate-background-color;
  // border-top: 1px solid $grey-color-light;
  // box-shadow: 0 0 20px $alternate-background-color;
  border-top: 3px double #aaa;
  // padding: $spacing-unit 0;
  padding: 1em 0;
  font-size: 0.85em;
  p {
    margin: 0.3em;
  }
  text-align: center;
}

.footer-heading {
    font-size: 18px;
    color: $alternate-color-dark;
  margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
  a {
      // color: powderblue;
  }
}

.footer-col-wrapper {
  font-size: 15px;
  color: $alternate-color-light;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit / 2;
  padding-left: $spacing-unit / 2;
}

.footer-col-1 {
  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
  width:         calc(50% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
  width:         calc(50% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width:         calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

// .rss-subscribe {
//     a { color: white; }
// }


/**
 * Custom display of posts list
 */
.posts-list {
    .category-head {
        font-size: 1.5em;
        margin-bottom: 0.3em;
    }
    .post-item {
        // border: 3px dashed #bbb;
        // border-radius: 10px;
        // padding: 10px;
        // margin: 10px;

        p {
            margin: 0.5em;
            margin-left: 0;
            // font-weight: bold;
        }
        &:last-of-type {
            margin-bottom: 1.3em;
        }
    }
}


/**
 * Page content
 */
.page-content {
  background-color: white;
  padding: $spacing-unit 0;
}

.page-heading {
  font-size: 20px;
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
  font-size: 24px;
}



/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit/1.5;
}

h1, .post-title {
  font-size: $title-base-font-size * 2;
  margin-bottom: 0.2em;
  &.home-section-title {
      margin-top: 1em;
  }

  @include media-query($on-laptop) {
    font-size: $title-base-font-size * 1.5;
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2, h3, h4, h5, h6 {
      margin-top: 1.2em;
      margin-bottom: 0.7em;
  }

  h2 {
    font-size: $title-base-font-size * 1.5;

    @include media-query($on-laptop) {
      font-size: $title-base-font-size * 1.25;
    }
  }

  h3 {
    font-size: $title-base-font-size * 1.25;

    @include media-query($on-laptop) {
      font-size: $title-base-font-size * 1.13;
    }
  }

  h4 {
    font-size: $title-base-font-size * 1.13;

    @include media-query($on-laptop) {
      font-size: $title-base-font-size * 1.07;
    }
  }

  dl {
      margin-left: 1.5em;
  }
  dd {
      margin-left: 2.5em;
  }
}

